--- a/Assignment-05/index.html
+++ b/Assignment-05/index.html
@@ -34,3 +34,5 @@
         <p><a href="mailto:david4.evans@umontana.edu">Email me!</a></p>
         <p>or</p>
         <p>32 Campus Drive, Missoula, MT 59812</p>
+    </body>
+  </html>
