assignment links added to web dev readme

--- a/assignment-04/index.html
+++ b/assignment-04/index.html
@@ -42,6 +42,6 @@ Yours is the Earth and everything that's in it,
 And - which is more - you'll be a Man, my son!
 </pre>
 
-<a href="assignment-04/about.html"
+<p><a href="assignment-04/about.html">About</a></p>
 
 </html>
