--- a/Assignment-05/index.html
+++ b/Assignment-05/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <!-- Recipe for Web-Dev Assignment-05 -->
   <head>
+    <title> Enhanced Ramen Noodles </title>
     <meta charset="utf-8">
     <meta name="Author" content="David Evans">
     <meta name="Description" content="Bacon and Egg Ramen Recipe"
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Enhanced Ramen Noodles </title>
   </head>
 
   <body>
     <h1>Bacon and Egg Ramen Noodles</h1>
-      <img src=".Images/TastyFacebook1080x1080.jpg" />
+      <img src="Images/TastyFacebook1080x1080.jpg" />
     <h1>Ingredients</h1>
       <ul>
         <li>1 package of instant ramen</li>
@@ -34,5 +34,6 @@
         <p><a href="mailto:david4.evans@umontana.edu">Email me!</a></p>
         <p>or</p>
         <p>32 Campus Drive, Missoula, MT 59812</p>
+      </address>
     </body>
   </html>
