--- a/assignment-06/index.html
+++ b/assignment-06/index.html
@@ -12,6 +12,7 @@
   <body>
 
     <h1>Draught Works Brewery</h1>
+    <img src="images/logo.png" />
     <address>
       915 Toole Ave<br>
       Missoula, MT 59802<br>
