--- a/Final/index.html
+++ b/Final/index.html
@@ -1,57 +1,164 @@
 <!DOCTYPE html>
-
-  <!-- Assignment-12 Cobra Kai -->
 <html>
+<head>
+<style>
+* {
+  box-sizing: border-box;
+}
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Cobra Kai - Strike First. Strike Hard. No Mercy.">
-    <meta name="author" content="David Evans">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cobra Kai Karate</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
-  </head>
+body {
+  font-family: Arial;
+  padding: 10px;
+  background: #f1f1f1;
+}
 
-  <body>
-    <img id="banner" src="./images/cobra-kai.jpg" alt="Cobra Kai" title="Cobra Kai"</img>
+/* Header/Blog Title */
+.header {
+  padding: 30px;
+  text-align: center;
+  background: white;
+}
 
-    <header class="navigation">
-      <div class="menu-item">
-          <p>Cobra Kai Karate</p></div>
-      <div class="menu-item link">
-          <a href="./index.html">Home</a></div>
-      <div class="menu-item link">
-              <a href="./about.html">About</a></div>
-      <div class="menu-item link">
-          <a href="./sensei.html">Candles</a></div>
-      <div class="menu-item link">
-             <a href="./contact.html">Contact</a></div>
-      <div class="menu-item link dropdown">
-          <a href="https://en.wikipedia.org/wiki/Cobra_Kai">Affiliations</a>
-          <div class="dropdown-content">
-             <div class="dropdown-item">
-                <a href="https://en.wikipedia.org/wiki/Cobra_Kai">Cobra Kai Wiki</a></div>
-             <div class="dropdown-item">
-                <a href="https://www.youtube.com/channel/UCe9DTWmhhxeKyYHL4mldGcA">Cobra Kai YouTube</a></div>
-             <div class="dropdown-item">
-                <a href="https://twitter.com/search?q=cobra+kai&ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Esearch">Cobra Kai Twitter</a></div>
-              <div class="dropdown-item">
-                <a href="https://www.facebook.com/CobraKaiSeries/">Cobra Kai Facebook</a></div>
-          </div>
-       </div>
-    </header>
+.header h1 {
+  font-size: 50px;
+}
 
+/* Style the top navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
 
-      <div class="content">
-      <h1>Cobra Kai Karate</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida cum sociis natoque penatibus et magnis dis parturient montes. Faucibus vitae aliquet nec ullamcorper sit amet risus nullam eget. Vitae suscipit tellus mauris a diam maecenas sed enim. Nibh tellus molestie nunc non blandit massa enim nec dui. Dignissim enim sit amet venenatis urna cursus eget nunc. Risus commodo viverra maecenas accumsan. Elit pellentesque habitant morbi tristique. Libero enim sed faucibus turpis in eu mi bibendum neque. Sit amet est placerat in egestas erat imperdiet.<br><br>
-        Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Mauris augue neque gravida in fermentum. Nibh sed pulvinar proin gravida hendrerit lectus. Netus et malesuada fames ac turpis egestas integer. Ipsum consequat nisl vel pretium lectus quam id. Morbi enim nunc faucibus a pellentesque sit amet porttitor. Eleifend quam adipiscing vitae proin sagittis nisl. Urna id volutpat lacus laoreet non curabitur gravida. Pellentesque habitant morbi tristique senectus et netus et. Sagittis nisl rhoncus mattis rhoncus urna neque. Arcu dictum varius duis at consectetur lorem donec massa. Semper eget duis at tellus at urna condimentum mattis. Tortor posuere ac ut consequat semper viverra nam libero. In nisl nisi scelerisque eu ultrices vitae. Purus gravida quis blandit turpis cursus in hac habitasse platea. A erat nam at lectus urna duis convallis convallis tellus.<br><br>
-        Tellus id interdum velit laoreet id donec. Tempus urna et pharetra pharetra. Sed vulputate odio ut enim blandit. Scelerisque varius morbi enim nunc faucibus a pellentesque sit amet. Dui faucibus in ornare quam viverra orci. Sit amet porttitor eget dolor. Ac placerat vestibulum lectus mauris ultrices eros in cursus turpis. Ultrices tincidunt arcu non sodales. Sed blandit libero volutpat sed. Habitant morbi tristique senectus et netus. Orci sagittis eu volutpat odio facilisis mauris sit amet massa. Tellus in metus vulputate eu scelerisque felis. Viverra nibh cras pulvinar mattis nunc sed blandit libero. Enim ut sem viverra aliquet. Dictum sit amet justo donec enim diam vulputate ut. Augue lacus viverra vitae congue. Lectus magna fringilla urna porttitor rhoncus. Sit amet nisl suscipit adipiscing bibendum est ultricies integer quis. Turpis egestas pretium aenean pharetra magna ac placerat vestibulum.<br><br>
-        Pellentesque diam volutpat commodo sed egestas. Sit amet aliquam id diam maecenas ultricies mi eget. Felis imperdiet proin fermentum leo vel orci porta. Aliquet enim tortor at auctor urna nunc id cursus. Vel pretium lectus quam id leo in vitae. In hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Mattis vulputate enim nulla aliquet porttitor lacus luctus accumsan. Sit amet nisl purus in mollis. Vitae nunc sed velit dignissim sodales ut eu sem. Aliquam vestibulum morbi blandit cursus risus. Libero enim sed faucibus turpis in eu mi bibendum neque. Pharetra vel turpis nunc eget lorem dolor sed viverra ipsum. Varius vel pharetra vel turpis nunc eget lorem dolor sed. Nunc mi ipsum faucibus vitae aliquet.<br><br>
-        Faucibus turpis in eu mi bibendum neque egestas. Viverra nibh cras pulvinar mattis nunc sed blandit libero. Nisi vitae suscipit tellus mauris a diam. Ultrices eros in cursus turpis. Et netus et malesuada fames. Pharetra sit amet aliquam id diam. Mauris vitae ultricies leo integer malesuada nunc vel risus commodo. Aliquam nulla facilisi cras fermentum odio eu feugiat pretium. Placerat orci nulla pellentesque dignissim. Quis ipsum suspendisse ultrices gravida dictum. Quam quisque id diam vel quam elementum pulvinar etiam non. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Convallis posuere morbi leo urna.
-        </p>
+/* Style the topnav links */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change color on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {
+  float: left;
+  width: 75%;
+}
+
+/* Right column */
+.rightcolumn {
+  float: left;
+  width: 25%;
+  background-color: #f1f1f1;
+  padding-left: 20px;
+}
+
+/* Fake image */
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
+}
+
+/* Add a card effect for articles */
+.card {
+  background-color: white;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Footer */
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: #ddd;
+  margin-top: 20px;
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn {
+    width: 100%;
+    padding: 0;
+  }
+}
+
+/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+@media screen and (max-width: 400px) {
+  .topnav a {
+    float: none;
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="header">
+  <h1>David Evans</h1>
+  <p>Multimedia journalist based in Missoula, Montana.</p>
+</div>
+
+<div class="topnav">
+  <a href="About">about.html</a>
+  <a href="Contact">contact.html</a>
+  <a href="Services">services.html</a>
+  <a href="Portfolio" style="float:right">Link</a>
+</div>
+
+<div class="row">
+  <div class="leftcolumn">
+    <div class="card">
+      <h2>Print and Audio</h2>
+      <h5>When you need your story told.</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
+      <p>Telling your story.</p>
+      <p>Features, obituaries, profiles and more all written in Associated Press style.</p>
     </div>
-  </body>
+    <div class="card">
+      <h2>Photography/Videography</h2>
+      <h5>Title description, Sep 2, 2017</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
+      <p>Sometimes words just aren't enough.</p>
+      <p>Event coverage, breaking news, documentary style filmmaking shot using DSLR and mirrorless cameras.</p>
+    </div>
+  </div>
+  <div class="rightcolumn">
+    <div class="card">
+      <h2>About Me</h2>
+      <div class="fakeimg" style="height:100px;">Image</div>
+      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+    </div>
+    <div class="card">
+      <h3>Popular Post</h3>
+      <div class="fakeimg"><p>Image</p></div>
+      <div class="fakeimg"><p>Image</p></div>
+      <div class="fakeimg"><p>Image</p></div>
+    </div>
+    <div class="card">
+      <h3>Follow Me</h3>
+      <p>Some text.</p>
+    </div>
+  </div>
+</div>
+
+<div class="footer">
+  <h2>Footer</h2>
+</div>
+
+</body>
 </html>
