--- a/Final/index.html
+++ b/Final/index.html
@@ -114,10 +114,10 @@ body {
 </div>
 
 <div class="topnav">
-  <a href="About">about.html</a>
-  <a href="Contact">contact.html</a>
-  <a href="Services">services.html</a>
-  <a href="Portfolio" style="float:right">Link</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+  <a href="services.html">Services</a>
+  <a href="https://daevans1990.myportfolio.com/" style="float:right">Portfolio</a>
 </div>
 
 <div class="row">
