--- a/Final/contact.html
+++ b/Final/contact.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <img id="contact-banner" src="./images/Cobra_Kai_1024x1024.jpg" alt="Cobra Kai" title="Cobra Kai"</img>
+    <img id="contact-banner" src="./images/Cobra_Kai_1024x1024.jpg" alt="David Evans" title="David Evans"</img>
     <header class="navigation">
       <div class="menu-item">
           <p>Cobra Kai Karate</p></div>
