--- a/Final/index.html
+++ b/Final/index.html
@@ -131,9 +131,9 @@ body {
     </div>
     <div class="card">
       <h2>Photography/Videography</h2>
-      <h5>Title description, Sep 2, 2017</h5>
+      <h5>Sometimes words just aren't enough.</h5>
       <div class="fakeimg" style="height:200px;">Image</div>
-      <p>Sometimes words just aren't enough.</p>
+      <p>Still and video photography</p>
       <p>Event coverage, breaking news, documentary style filmmaking shot using DSLR and mirrorless cameras.</p>
     </div>
   </div>
@@ -141,7 +141,7 @@ body {
     <div class="card">
       <h2>About Me</h2>
       <div class="fakeimg" style="height:100px;">Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+      <p>Multimedia journalist with a bachelor's degree from the University of Montana School of Journalism.</p>
     </div>
     <div class="card">
       <h3>Popular Post</h3>
@@ -151,13 +151,13 @@ body {
     </div>
     <div class="card">
       <h3>Follow Me</h3>
-      <p>Some text.</p>
+      <p>@davidevans406</p>
     </div>
   </div>
 </div>
 
 <div class="footer">
-  <h2>Footer</h2>
+  <h2>A truly free and independent press is a vital component of any healthy democratic society.</h2>
 </div>
 
 </body>
