--- a/Final/index.html
+++ b/Final/index.html
@@ -125,14 +125,14 @@ body {
     <div class="card">
       <h2>Print and Audio</h2>
       <h5>When you need your story told.</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
+      <div class=".images/Journalism2.jpg" style="height:200px;">Multimedia Journalism</div>
       <p>Telling your story.</p>
       <p>Features, obituaries, profiles and more all written in Associated Press style.</p>
     </div>
     <div class="card">
       <h2>Photography/Videography</h2>
       <h5>Sometimes words just aren't enough.</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
+      <div class=".images/Photo1.jpg" style="height:200px;">Photojournalism</div>
       <p>Still and video photography</p>
       <p>Event coverage, breaking news, documentary style filmmaking shot using DSLR and mirrorless cameras.</p>
     </div>
@@ -140,14 +140,14 @@ body {
   <div class="rightcolumn">
     <div class="card">
       <h2>About Me</h2>
-      <div class="fakeimg" style="height:100px;">Image</div>
+      <div class=".images/Portrait1.jpg" style="height:100px;">Image</div>
       <p>Multimedia journalist with a bachelor's degree from the University of Montana School of Journalism.</p>
     </div>
     <div class="card">
       <h3>Popular Post</h3>
-      <div class="fakeimg"><p>Image</p></div>
-      <div class="fakeimg"><p>Image</p></div>
-      <div class="fakeimg"><p>Image</p></div>
+      <div class=".images/MMA1.jpg"><p>Impact MMA - Bozeman, MT</p></div>
+      <div class=".images/socotra1.jpg"><p>Socotra Music Festival - Missoula, MT</p></div>
+      <div class=".images/Brad1.jpg"><p>Bradley Lehuta - Owner of Missoula BJJ</p></div>
     </div>
     <div class="card">
       <h3>Follow Me</h3>
