--- a/Final/index.html
+++ b/Final/index.html
@@ -132,7 +132,7 @@ body {
     <div class="card">
       <h2>Photography/Videography</h2>
       <h5>Sometimes words just aren't enough.</h5>
-      <div class="./images/Photo1.jpg" style="height:200px;">Photojournalism</div>
+      <div class= <img id="Photo" src="./images/Photo1.jpg" alt="Photojournalism" title="Photojournalism"</img> style="height:200px;">Photojournalism</div>
       <p>Still and video photography</p>
       <p>Event coverage, breaking news, documentary style filmmaking shot using DSLR and mirrorless cameras.</p>
     </div>
