--- a/Final/index.html
+++ b/Final/index.html
@@ -125,7 +125,7 @@ body {
     <div class="card">
       <h2>Print and Audio</h2>
       <h5>When you need your story told.</h5>
-      <div class="./images/Journalism2.jpg" style="height:200px;">Multimedia Journalism</div>
+      <div class= src="./images/Journalism2.jpg" style="height:200px;">Multimedia Journalism</div>
       <p>Telling your story.</p>
       <p>Features, obituaries, profiles and more all written in Associated Press style.</p>
     </div>
