--- a/Final/index.html
+++ b/Final/index.html
@@ -140,14 +140,14 @@ body {
   <div class="rightcolumn">
     <div class="card">
       <h2>About Me</h2>
-      <div class="./images/Portrait1.jpg" style="height:100px;">Image</div>
+      <img id="Portrait1" src="./images/Portrait1.jpg" alt="Portrait" title="Portrait"</img>
       <p>Multimedia journalist with a bachelor's degree from the University of Montana School of Journalism.</p>
     </div>
     <div class="card">
       <h3>Popular Post</h3>
-      <div class="./images/MMA1.jpg"><p>Impact MMA - Bozeman, MT</p></div>
-      <div class="./images/socotra1.jpg"><p>Socotra Music Festival - Missoula, MT</p></div>
-      <div class="./images/Brad1.jpg"><p>Bradley Lehuta - Owner of Missoula BJJ</p></div>
+      <img id="MMA1" src="./images/MMA1.jpg" alt="MMA" title="MMA"</img>
+      <img id="Socotra1" src="./images/socotra1.jpg" alt="Socotra" title="Socotra"</img>
+      <img id="Brad1" src="./images/Brad1.jpg" alt="Bradley Lehuta" title="Bradley Lehuta"</img>
     </div>
     <div class="card">
       <h3>Follow Me</h3>
