--- a/Final/contact.html
+++ b/Final/contact.html
@@ -15,31 +15,11 @@
   </head>
 
   <body>
-    <img id="contact-banner" src="./images/Cobra_Kai_1024x1024.jpg" alt="David Evans" title="David Evans"</img>
+    <img id="contact-banner" src="./images/Journalism1.png" alt="David Evans" title="David Evans"</img>
     <header class="navigation">
-      <div class="menu-item">
-          <p>Cobra Kai Karate</p></div>
-      <div class="menu-item link">
-          <a href="./index.html">Home</a></div>
-      <div class="menu-item link">
-              <a href="./about.html">About</a></div>
-      <div class="menu-item link">
-          <a href="./sensei.html">Sensei</a></div>
-      <div class="menu-item link">
+
              <a href="./contact.html">Contact</a></div>
-             <div class="menu-item link dropdown">
-                 <a href="https://en.wikipedia.org/wiki/Cobra_Kai">Affiliations</a>
-                 <div class="dropdown-content">
-                    <div class="dropdown-item">
-                       <a href="https://en.wikipedia.org/wiki/Cobra_Kai">Cobra Kai Wiki</a></div>
-                    <div class="dropdown-item">
-                       <a href="https://www.youtube.com/channel/UCe9DTWmhhxeKyYHL4mldGcA">Cobra Kai YouTube</a></div>
-                    <div class="dropdown-item">
-                       <a href="https://twitter.com/search?q=cobra+kai&ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Esearch">Cobra Kai Twitter</a></div>
-                     <div class="dropdown-item">
-                       <a href="https://www.facebook.com/CobraKaiSeries/">Cobra Kai Facebook</a></div>
-                 </div>
-      </div>
+
     </header>
 
     <div class="content">
@@ -49,7 +29,7 @@
         Name<br>
         <input type="text" name="name" id="name_input"/> <br><br>
         Email</br>
-        <input type="text" name="email" id="email_input" placeholder="example@umontana.edu"/> <br><br>
+        <input type="text" name="email" id="email_input" placeholder="david_59860@yahoo.com"/> <br><br>
         </br>
         Comments or Concerns<br>
         <textarea name="comments" id="comments-textarea" maxlength="500" cols="90" rows="4">Enter up to 500 characters...</textarea>
