--- a/Final/contact.html
+++ b/Final/contact.html
@@ -29,7 +29,7 @@
         Name<br>
         <input type="text" name="name" id="name_input"/> <br><br>
         Email</br>
-        <input type="text" name="email" id="email_input" placeholder="david_59860@yahoo.com"/> <br><br>
+        <input type="text" name="email" id="email_input" placeholder="example@website.com"/> <br><br>
         </br>
         Comments or Concerns<br>
         <textarea name="comments" id="comments-textarea" maxlength="500" cols="90" rows="4">Enter up to 500 characters...</textarea>
