--- a/Final/contact.html
+++ b/Final/contact.html
@@ -18,7 +18,7 @@
     <img id="contact-banner" src="./images/Journalism1.png" alt="David Evans" title="David Evans"</img>
     <header class="navigation">
 
-             <a href="./contact.html">Contact</a></div>
+             <a href="./index.html">Home</a></div>
 
     </header>
 
