--- a/Final/index.html
+++ b/Final/index.html
@@ -144,7 +144,7 @@ body {
       <p>Multimedia journalist with a bachelor's degree from the University of Montana School of Journalism.</p>
     </div>
     <div class="card">
-      <h3>Popular Post</h3>
+      <h3>Popular Posts</h3>
       <img id="MMA1" src="./images/MMA1.jpg" alt="MMA" title="MMA"</img>
       <img id="Socotra1" src="./images/socotra1.jpg" alt="Socotra" title="Socotra"</img>
       <img id="Brad1" src="./images/Brad1.jpg" alt="Bradley Lehuta" title="Bradley Lehuta"</img>
