adjusted image size and added h2

--- a/Final/about.html
+++ b/Final/about.html
@@ -128,9 +128,8 @@
 
     <div class="content">
     <h1>About</h1>
-
+    <h2>David Evans</h2>
       <p>
-        <br>David Evans</br>
         I am a US Army veteran who served multiple tours in the Middle East. After leaving the service, I decided to pursue higher education and enrolled at the University of Montana School of Journalism. I graduated from UM in 2019 and am now working as a freelance journalist based out of Missoula, Montana.
       </p>
 
